--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mobx": "^3.1.15",
+    "mobx-react": "~4.1.0",
+    "mobx-state-tree": "^1.3.1",
+    "mobx-utils": "^3.2.2",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
+    "prop-types": "^15.6.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.3.1",
